# rs_shield

./: .editorconfig  .gitignore  CONTRIBUTING.md  Cargo.toml  GEMINI.md  LICENSE  PORTABILITY_SOLUTION.md  README.md  SECURITY.md  WORKSPACE_OPTIMIZATION.md  auth.toml  beta.toml  deny.toml  main.rs  marcio.toml  rsb-report-restore-20260517-072501.html  rsb-report-restore-20260521-070535.html  rsb-report-verify-20260517-074558.html  teste.toml
.cargo/: config.toml
.github/: CI_CD.md  GITHUB_SETUP.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: benchmark.yml  coverage.yml  docs.yml  lint.yml  msrv.yml  pr-checks.yml  release.yml  security.yml  test.yml
crates/: main.rs
crates/rsb-cli/: CLI_GUIDE.md  Cargo.toml
crates/rsb-cli/assets/: fido2_auth.html
crates/rsb-cli/src/: config_cmd.rs  helpers.rs  lib.rs  list_profiles_cmd.rs  main.rs
crates/rsb-cli/src/assets/: fido2_auth.html
crates/rsb-cli/src/auth/: handlers.rs  handlers.rs.bak  login_flow.rs  middleware.rs  routes.rs  routes.rs.bak
crates/rsb-cli/src/command/: config_cmd.rs  fido2_cmd.rs  main_cmd.rs  mod.rs  snapshot_cmd.rs
crates/rsb-cli/src/fido2/: fido2_cmd.rs  fido2_cmd.rs.bak  fido2_web.rs  mod.rs  snapshot_cmd.rs
crates/rsb-cli/tests/: portable_cli_tests.rs
crates/rsb-desktop/: BACKUP_SCREEN_INTEGRATION_EXAMPLE.md  Cargo.toml  DESIGN_GUIDE.md  Dioxus.toml  LOADING_IMPLEMENTATION_EXAMPLES.md  LOADING_STATE_GUIDE.md  LOADING_STYLE_IMPLEMENTATION.md  README.md  tailwind.config.js
crates/rsb-desktop/examples/: notification_integration_example.rs
crates/rsb-desktop/src/: main.rs
crates/rsb-desktop/src/ui/: app.rs  app_preferences.rs  backup_integrity_screen.rs  backup_screen.rs  config_screen.rs  create_profile_screen.rs  diagnostics_screen.rs  error_handler.rs  fido2_manager_view.rs  i18n.rs  integrations_screen.rs  loading_state.rs  login_screen.rs  mod.rs  operation_timer.rs  operations.rs  operations_helpers.rs  profile_loader.rs  profile_manager_screen.rs  prune_screen.rs  realtime_sync_screen.rs  restore_screen.rs  s3_tester.rs  schedule_screen.rs  shared.rs  snapshot_list_screen.rs  snapshots_screen.rs  styles.css  telegram_validator.rs  verify_screen.rs
crates/rsb-desktop/tests/: portable_ui_tests.rs
crates/rsb-sdk/: Cargo.toml  README.md  manifest.rs  middleware.rs  notification_history.rs
crates/rsb-sdk/src/: lib.rs  main.rs  portable_restore.rs  realtime.rs  report.rs  s3_check.rs
crates/rsb-sdk/src/auth/: audit.rs  jwt.rs  mod.rs  rate_limit.rs  session.rs  types.rs
crates/rsb-sdk/src/backup/: diagnostic.rs  discovery.rs  metadata.rs  mod.rs  processing.rs  progress.rs  stats.rs  threading.rs
crates/rsb-sdk/src/config/: mod.rs
crates/rsb-sdk/src/core/: backup.rs  cancellation.rs  chat_integrations.rs  email_notifications.rs  file_processor.rs  manifest.rs  mod.rs  notification_history.rs  notification_logger.rs  notifications.rs  prune.rs  resource_monitor.rs  restore.rs  storage_backend.rs  telegram_validator.rs  types.rs
crates/rsb-sdk/src/credentials/: credentials_manager.rs  encryption.rs  fido2.rs  fido2_manager.rs  mod.rs  provider.rs  secure_string.rs  server.rs  web_authn.rs
crates/rsb-sdk/src/crypto/: mod.rs
crates/rsb-sdk/src/fido2/: error.rs  fido2_web.rs  manager.rs  mod.rs  models.rs
crates/rsb-sdk/src/integrity/: chain.rs  checksum.rs  chunk.rs  errors.rs  hash.rs  manifest.rs  mod.rs  progress_bar.rs  report.rs  types.rs  verify.rs
crates/rsb-sdk/src/metrics/: system.rs
crates/rsb-sdk/src/operation/: mod.rs  operations.rs  operations_helpers.rs
crates/rsb-sdk/src/server/: handlers.rs  login_flow.rs  middleware.rs  mod.rs  routes.rs
crates/rsb-sdk/src/snapshot/: manager.rs  manifest.rs  mod.rs  model.rs  repository.rs  types.rs
crates/rsb-sdk/src/storage/: mod.rs
crates/rsb-sdk/src/utils/: mod.rs
crates/rsb-sdk/tests/: config_tests.rs  core_manifest_tests.rs  core_operations_tests.rs  core_prune_tests.rs  core_resource_monitor_tests.rs  core_storage_backend_tests.rs  core_types_tests.rs  crypto_tests.rs  expand_path_tests.rs  fido2_integration_tests.rs  fido2_tests.rs  integration_notifications_tests.rs  integration_tests.rs  portable_restore_tests.rs  realtime_tests.rs  report_tests.rs  utils_tests.rs
crates/rsb-server/: Cargo.toml
crates/rsb-server/migrations/: 20240607000001_create_files_table.sql  20240607_create_files_table.sql
crates/rsb-server/src/: auth.rs  config.rs  db.rs  lib.rs  main.rs
docs/: BACKUP_PORTABILITY_ISSUES.md  CLI.md  DEVELOPER_GUIDE.md  FIXES_IMPLEMENTED.md  NEXT_STEPS_IMPLEMENTED.md  PORTABILITY_GUIDE_INDEX.md  TROUBLESHOOTING_PORTABILITY.md  USER_GUIDE.md
tests/: CHANGELOG.md  README.md  config_tests.rs  core_manifest_tests.rs  core_operations_tests.rs  core_prune_tests.rs  core_resource_monitor_tests.rs  core_storage_backend_tests.rs  crypto_tests.rs  integration_tests.rs  realtime_tests.rs  report_tests.rs  utils_tests.rs
