[workspace]
members = [
    "crates/rsb-cli",
    "crates/rsb-sdk",
    "crates/rsb-desktop",
]

resolver = "2"
[workspace.package]
version = "0.1.0-alpha.3"
edition = "2024"
license = "MIT"
repository = "https://github.com/rs-shield/rs_shield"
authors = ["Marcio Zebedeu"]
rust-version = "1.95.0"

[workspace.dependencies]

# Async
tokio = { version = "1", features = ["rt-multi-thread", "macros", "signal"] }
async-trait = "0.1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "1.0"

# Time / IDs
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "v5", "serde"] }

# CLI
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.18"
console = "0.16"
rpassword = "7.4"
atty = "0.2.14"

# Networking
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# Filesystem
walkdir = "2"
glob = "0.3"
ignore = "0.4"
notify = "8.2"
memmap2 = "0.9"

# Performance
rayon = "1.10"
zstd = "0.13"

# Crypto
ring = "0.17"
blake3 = "1.5"
sha2 = "0.11"
pbkdf2 = "0.13"
aes-gcm = "0.10.3"
zeroize = { version = "1.7", features = ["derive"] }
base64 = "0.22"
rand = "0.10"

# Security
keyring = "2.3.3"
jsonwebtoken = "9.2"

# WebAuthn / FIDO2
webauthn-rs = { version = "0.5.4", default-features = false, features = [
    "danger-credential-internals",
    "preview-features",
] }

authenticator = "0.4.1"
ctap-hid-fido2 = { version = "0.2", default-features = false }

# System
dirs = "6.0"
sysinfo = "0.38"
battery = "0.7.8"

# AWS
aws-config = "1.8.16"
aws-sdk-s3 = "1.132.0"
aws-credential-types = "1.2.14"

# Email
lettre = "0.11"

# Web server
axum = "0.7"

axum-extra = { version = "0.9", features = [
    "cookie",
] }

tower = "0.4"

tower-http = { version = "0.5", features = [
    "cors",
    "trace",
] }

# Desktop / UI
dioxus = { version = "0.7", features = ["desktop", "router"] }
dioxus-desktop = "0.7"

rfd = "0.17"
notify-rust = "4.11"
open = "5.0"

# HTML
maud = "0.27"

# OpenSSL
openssl = { version = "0.10", features = ["vendored"] }

# Utilities
regex = "1"
anyhow = "1.0"
thiserror = "1.0"

[profile.release]
debug = false
lto = "thin"
opt-level = 3
codegen-units = 1
strip = true
panic = "abort"