[workspace]
members = [
    "crates/rsb-sdk",
    "crates/rsb-cli",
    "crates/rsb-desktop",
    "crates/rsb-server",
]

[workspace.package]
version = "0.1.0-alpha.3"
edition = "2021"
authors = ["Zebedeu"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/Zebedeu/rs_shield"

[workspace.dependencies]
# Common deps here if needed
