[package]
name = "rsb-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]

# INTERNAL
rsb-sdk = { path = "../rsb-sdk", features = ["cli", "server"] }

# WEB (for FIDO2 auth)
axum = { workspace = true }

# CLI
clap = { workspace = true }
atty = { workspace = true }
indicatif = { workspace = true }
console = { workspace = true }
rpassword = { workspace = true }
pathdiff = "0.2.3"

# ASYNC
tokio = { workspace = true }
async-trait = { workspace = true }

# LOGGING
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# SERIALIZATION
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# TIME / IDS
chrono = { workspace = true }
uuid = { workspace = true }

# FILESYSTEM
walkdir = { workspace = true }
dirs = { workspace = true }

# UTILITIES
anyhow = { workspace = true }

[dev-dependencies]
tempfile = "3.8"