[package]
name = "rsb-desktop"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]

# INTERNAL

rsb-sdk = { path = "../rsb-sdk" }

# DIOXUS / UI

dioxus = { workspace = true }
dioxus-desktop = { workspace = true }

rfd = { workspace = true }
notify-rust = { workspace = true }

# ASYNC

tokio = { workspace = true }

# LOGGING

tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# SERIALIZATION

serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }

# TIME

chrono = { workspace = true }

# FILESYSTEM

walkdir = { workspace = true }
dirs = { workspace = true }

# NETWORKING

reqwest = { workspace = true }

# SYSTEM

sysinfo = { workspace = true }
battery = { workspace = true }

# UTILITIES

regex = { workspace = true }
rand = { workspace = true }

open = { workspace = true }
anyhow = { workspace = true }

# TLS

openssl = { workspace = true }