[package]
name = "rsb-sdk"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
rust-version.workspace = true
[dependencies]

# CORE (always required)
tokio = { workspace = true }
async-trait = { workspace = true }
crossbeam-channel = "0.5"
jwalk = "0.8"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
walkdir = { workspace = true }
glob = { workspace = true }
ignore = { workspace = true }
memmap2 = { workspace = true }
notify = { workspace = true }
pathdiff = "0.2.3"
rayon = { workspace = true }
dashmap = "6.1"
zstd = { workspace = true }
num_cpus = "1.17.0"
reqwest = { workspace = true }
hex = { version = "0.4", features = ["serde"] }
aws-credential-types = { workspace = true }
ring = { workspace = true }
blake3 = { workspace = true }
sha2 = { workspace = true }
pbkdf2 = { workspace = true }
aes-gcm = { workspace = true }
zeroize = { workspace = true }
base64 = { workspace = true }
rand = { workspace = true }
keyring = { workspace = true }
dirs = { workspace = true }
sysinfo = { workspace = true }
battery = { workspace = true }
regex = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
open = { workspace = true }
webauthn-rs = { workspace = true }
aws-config = { workspace = true }
aws-sdk-s3 = { workspace = true }

# CLI FEATURE (optional)
clap = { workspace = true, optional = true }
indicatif = { workspace = true, optional = true }
console = { workspace = true, optional = true }
rpassword = { workspace = true, optional = true }

# SERVER FEATURE (optional, includes web & auth UI)
axum = { workspace = true, optional = true }
axum-extra = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true }
jsonwebtoken = { workspace = true, optional = true }
maud = { workspace = true, optional = true }

# EMAIL FEATURE (optional)
lettre = { workspace = true, optional = true }

[features]
default = ["server"]

# Server feature enables FIDO2 web server, web auth UI, and email notifications
server = ["axum", "axum-extra", "tower", "tower-http", "jsonwebtoken", "maud", "lettre", "indicatif"]

# CLI feature enables interactive credential prompting and terminal UI
cli = ["clap", "indicatif", "console", "rpassword"]

# Email feature enables email notifications (included in server feature)
email = ["lettre"]

[dev-dependencies]
tempfile = "3.8"
toml = { workspace = true }