[package]
name = "rsb-server"
version = "0.1.0-alpha.1"
edition = "2021"
authors = ["Zebedeu"]
description = "Servidor RS Shield - Sync tipo Google Drive"
license = "MIT OR Apache-2.0"

[dependencies]
axum = { version = "0.7", features = ["ws", "json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
rsb-sdk = { path = "../rsb-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9"

# Postgres
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "macros", "migrate"] }
