[package]
name = "rsb-server"
version = "0.1.0-alpha.4"
edition = "2021"
authors = ["Zebedeu"]
description = "RS Shield Server - Drive-like sync with FIDO2/YubiKey support"
license = "MIT OR Apache-2.0"

[dependencies]
axum = { version = "0.7", features = ["ws", "json"] }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "cors", "trace"] }
rsb-sdk = { path = "../rsb-sdk" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "migrate", "uuid"] }
argon2 = { version = "0.5", features = ["std"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
webauthn-rs = { version = "0.5", features = ["danger-credential-internals"] }
webauthn-rs-proto = "0.5"
base64 = "0.22"
url = "2.5"
tower = "0.5"
